# LevelUp_PortoDigital_FSPH

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  alembic.ini  banco.py  criterios.json  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_initial_tables.py  002_create_users_table.py  003_workflow_and_checklist.py  004_admin_and_context_documents.py  005_chat_sessions_user_and_term.py
backend/app/: cli.py  main.py
backend/app/api/routes/: admin.py  analysis.py  auth.py  chat.py  dashboard.py  terms.py  upload.py  workflow.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  analysis.py  chat_session.py  context_document.py  term.py  term_checklist.py  user.py  workflow_event.py
backend/app/repositories/: analysis.py  checklist.py  context_document.py  term.py  user.py  workflow_event.py
backend/app/schemas/: analysis.py  chat.py  checklist.py  context_document.py  term.py  user.py  workflow.py
backend/app/services/: ai_chat.py  auth.py  compliance.py  document.py  nlp.py  pdf_generator.py  rag_service.py  workflow.py
backend/app/utils/: exceptions.py  logging.py
backend/scripts/: seed_users.py
docs/: Termo de Referência - BRINDES.docx  Termo de Referência - CURSOS.docx  Termo de Referência - MOBILIÁRIO.docx  backend-tasks.md
docs/superpowers/plans/: 2026-04-13-mvp-demo.md
docs/superpowers/specs/: 2026-04-13-mvp-demo-design.md
documents/: Termo de Referência  Sistema de Monitoramento.docx  Termo de Referência HEMO 2024.docx
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/.firebase/: hosting.ZGlzdA.cache
frontend/src/: App.jsx  App.tsx  api.js  constants.ts
frontend/src/components/Admin/: ContextDocumentsView.tsx
frontend/src/components/Auth/: LoginPage.tsx
frontend/src/components/Chat/: ChatView.tsx
frontend/src/components/Dashboard/: DashboardView.tsx
frontend/src/components/Layout/: FaixaCores.tsx  Header.tsx  MenuButton.tsx  Sidebar.tsx
frontend/src/components/Terms/: TermDetail.tsx  TermList.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useApi.ts
frontend/src/lib/: constants.ts  utils.ts
frontend/src/services/: api.ts  auth.ts
frontend/src/types/: index.ts
(+1 files in other folders)
