[project]
name = "fsph-backend"
version = "0.1.0"
description = "FSPH - Sistema Inteligente de Análise de Termos de Referência"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "openai>=1.40.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
