[project]
name = "fsph-backend"
version = "0.1.0"
description = "FSPH - Sistema Inteligente de Análise de Termos de Referência"
requires-python = ">=3.12"
dependencies = [
    # --- API Framework ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",  # upload de arquivos via multipart/form-data

    # --- Banco de dados ---
    "sqlalchemy[asyncio]>=2.0.0",  # ORM async
    "alembic>=1.13.0",              # migrações de banco
    "asyncpg>=0.30.0",              # driver async PostgreSQL (usado pelo SQLAlchemy)
    "psycopg[binary]>=3.2.0",       # driver sync (usado pelo Alembic)

    # --- Validação e configuração ---
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",  # leitura de .env com tipagem
    "python-dotenv>=1.0.0",

    # --- Cache ---
    "redis>=5.0.0",

    # --- HTTP cliente ---
    "httpx>=0.27.0",

    # --- IA ---
    "openai>=1.40.0",

    # --- Extração de documentos ---
    "pdfplumber>=0.11.0",    # PDF com suporte a tabelas (melhor que PyPDF2)
    "python-docx>=1.1.0",   # arquivos .docx

    # --- Geração de PDF ---
    "reportlab>=4.2.0",     # geração de PDF com layout customizado

    # --- Utilitários ---
    "aiofiles>=24.0.0",     # leitura/escrita async de arquivos

    # --- RAG / Banco Vetorial ---
    "chromadb>=0.6.0",                     # banco vetorial embutido
    "sentence-transformers>=3.0.0",        # embeddings multilíngues locais
]

[project.scripts]
dev   = "app.cli:dev"
start = "app.cli:start"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py312"
